[gd_scene load_steps=20 format=2]

[ext_resource path="res://entity/Player.gd" type="Script" id=1]
[ext_resource path="res://textures/sword.png" type="Texture" id=2]
[ext_resource path="res://textures/reticle.png" type="Texture" id=3]
[ext_resource path="res://textures/health_indicator.png" type="Texture" id=4]
[ext_resource path="res://entity/HUD.gd" type="Script" id=5]
[ext_resource path="res://textures/HUD.png" type="Texture" id=6]
[ext_resource path="res://textures/bolt.png" type="Texture" id=7]
[ext_resource path="res://font/pixelnumbers.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://textures/blue_key.png" type="Texture" id=9]
[ext_resource path="res://textures/look_tutorial.png" type="Texture" id=10]
[ext_resource path="res://textures/tiles/black.png" type="Texture" id=12]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.2, 0.5, 0.2 )

[sub_resource type="Animation" id=2]
resource_name = "Attack"
length = 0.2
step = 0.025
tracks/0/type = "bezier"
tracks/0/path = NodePath("..:translation:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("..:translation:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("..:translation:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.1, 0, 0.0145257, -0.0298029, -0.229988, -0.0164555, 0.126797, 0.0612999, 0.0772332, -0.00882033, -0.141897, 0.00351061, 0.25, 0 ),
"times": PoolRealArray( 0, 0.025, 0.2 )
}

[sub_resource type="BoxShape" id=3]
extents = Vector3( 0.3, 0.2, 0.5 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 0.3, 0.6, 0.3 )

[sub_resource type="DynamicFont" id=5]
size = 40
extra_spacing_char = 1
font_data = ExtResource( 8 )

[sub_resource type="Animation" id=6]
resource_name = "Death Fade Out"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=7]
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "Fade Out"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="Player" type="Spatial"]
script = ExtResource( 1 )

[node name="KinematicBody" type="KinematicBody" parent="."]
collision_layer = 524289

[node name="CollisionShape" type="CollisionShape" parent="KinematicBody"]
shape = SubResource( 1 )

[node name="RayCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0 )
enabled = true
cast_to = Vector3( 0, -0.05, 0 )

[node name="Camera Base" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.414715, -0.142349 )

[node name="Camera" type="Camera" parent="Camera Base"]

[node name="Projectile Origin" type="Spatial" parent="Camera Base/Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.121643, 0.238467 )

[node name="Weapon Container" type="Spatial" parent="Camera Base/Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.00882033 )

[node name="Weapon" type="Sprite3D" parent="Camera Base/Camera/Weapon Container"]
transform = Transform( 0.707107, -0.707107, 0, 0.311538, 0.311538, 0.897713, -0.634779, -0.634779, 0.440582, 0, -0.19923, -0.435512 )
pixel_size = 0.02
alpha_cut = 2
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera Base/Camera/Weapon Container/Weapon"]
anims/Attack = SubResource( 2 )

[node name="Sword Hitbox" type="Area" parent="Camera Base/Camera"]

[node name="CollisionShape" type="CollisionShape" parent="Camera Base/Camera/Sword Hitbox"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.656182 )
shape = SubResource( 3 )

[node name="Reticle" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Reticle"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hitbox" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Hitbox"]
shape = SubResource( 4 )

[node name="HUD" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HUD Container" type="Node2D" parent="HUD"]

[node name="HUD Back" type="Sprite" parent="HUD/HUD Container"]
position = Vector2( 0.124207, -60.0452 )
scale = Vector2( 4, 4 )
texture = ExtResource( 6 )

[node name="Hearts Container" type="Node2D" parent="HUD/HUD Container"]
position = Vector2( -38.1953, -61.0142 )

[node name="Health Indicator" type="Sprite" parent="HUD/HUD Container"]
position = Vector2( -40, -80 )
scale = Vector2( 5, 5 )
texture = ExtResource( 4 )
centered = false
hframes = 5

[node name="Ammo" type="Sprite" parent="HUD/HUD Container"]
position = Vector2( 65.2501, -42.4985 )
scale = Vector2( 3, 3 )
texture = ExtResource( 7 )

[node name="Ammo Count" type="RichTextLabel" parent="HUD/HUD Container"]
margin_left = 87.3693
margin_top = -56.3553
margin_right = 183.369
margin_bottom = -10.3553
custom_fonts/normal_font = SubResource( 5 )
text = "23"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Blue Key" type="Sprite" parent="HUD/HUD Container"]
position = Vector2( 177.953, -44.357 )
scale = Vector2( 3, 3 )
texture = ExtResource( 9 )

[node name="Tutorial" type="Sprite" parent="HUD/HUD Container"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 310.714, -251.415 )
scale = Vector2( 4, 4 )
texture = ExtResource( 10 )

[node name="Fade" type="TextureRect" parent="."]
modulate = Color( 0, 0, 0, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 12 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Fade"]
"anims/Death Fade Out" = SubResource( 6 )
"anims/Fade In" = SubResource( 7 )
"anims/Fade Out" = SubResource( 8 )
[connection signal="big_hit" from="." to="." method="_on_Player_big_hit"]
[connection signal="hit" from="." to="." method="_on_Player_hit"]
[connection signal="animation_finished" from="Fade/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
